force-app/main/default/objects/KYC_Response_Related_Entities__c/KYC_Response_Related_Entities__c.object-meta.xml
<CustomObject>
    <label>KYC Response - Related Entity</label>
    <nameField>
        <displayFormat>KYC-RE{0000000}</displayFormat>
        <label>KYC Response - Related Entity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Response - Related Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>