force-app/main/default/objects/KYC_Response_Related_Entities__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>