force-app/main/default/objects/KYC_Response_Related_Entities__c/fields/Corporate_or_Management_Malpractice__c.field-meta.xml
<CustomField>
    <fullName>Corporate_or_Management_Malpractice__c</fullName>
    <inlineHelpText>Are there any instances on record or pending against your Company and /or its Directors in respect of any financial matter, corporate or management malpractice or non-compliance with any statute?</inlineHelpText>
    <label>Corporate or Management Malpractice</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>