force-app/main/default/objects/KYC_Response_Related_Entities__c/fields/Is_Beneficial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Beneficial_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Beneficial Owner?</label>
    <type>Checkbox</type>
</CustomField>