force-app/main/default/objects/KYC_Response_Related_Entities__c/fields/KYC_Response__c.field-meta.xml
<CustomField>
    <fullName>KYC_Response__c</fullName>
    <label>KYC Response</label>
    <referenceTo>KYC_Response__c</referenceTo>
    <relationshipLabel>KYC Response - Related Entities</relationshipLabel>
    <relationshipName>KYC_Response_Related_Entities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>