force-app/main/default/objects/KYC_Response_Related_Entities__c/fields/Primary_Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source_of_Wealth__c</fullName>
    <label>Primary Source of Wealth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_of_Wealth</valueSetName>
    </valueSet>
</CustomField>