force-app/main/default/objects/KYC_Response_Related_Entities__c/fields/Registed_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Registed_Company_Number__c</fullName>
    <label>Registed Company Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>