force-app/main/default/objects/KYC_Response_Related_Entities__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <inlineHelpText>Must match the ID details.</inlineHelpText>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>